
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 MAR 01a
  * in model/share/fluid_share.c
    - in condition_Lambda_plus_minus_Parent(), improved the algorithm so that only V for fluxes below fluxet-1
      is used to determine Vmin and Vmax
    - deleted functions that are not used anymore:
      o condition_Lambda_plus_minus_Parent_firstpass()
      o condition_Lambda_plus_minus_Parent5()
      o condition_Lambda_plus_minus_Parent4()
      o condition_Lambda_plus_minus_Parent3()
      o condition_Lambda_plus_minus_Parent2()
      o condition_Lambda_plus_minus_Parent1()


2019 FEB 28b
  * in src/test.c
     - in main(), added code to free npArray and its data structure
     - in main(), added calls to free_clipped_variables(), SOAP_free_codex(), free ( npArray ), 
       free ( control_filename ), free ( input.name ), free ( argint ) and free( gl.cycle.code_runtime ) 
       prior to exiting to get rid of memory leaks reports
     - in main(), added calls to dispose_node() for npL and npR to free allocated memory in their old 
       addresses before assigning new addresses
  * in src/post.c  
     - in read_post(), added conditional statement to properly free np_post


2019 FEB 28a
   * in model/share/fluid_share.c
     - rewrote condition_Lambda_plus_minus_Parent() in accordance with the latest positivity-preserving
       theory in multiple dimensions
     - added condition_Lambda_plus_minus_Parent5()


2019 FEB 27c
   * in lib/soap/soap.c
     - in BA_printf(), added a fatal_error if numargum<1
     - in BA_fprintf(), added a fatal_error if numargum<2


2019 FEB 27b
   * in src/post.c
     - commented changes to read_post() done on 19feb27a because such could give a core dump when
       no xcut were performed in the Post() module
   * in src/common.c