@@ -120,7 +120,7 @@ Init(
 
 Disc(
   FavreReynoldsTv(
-    zetaA1=0.02e0;    {conditions the eigenvalue of the A jacobian}
+    zetaA1=0.1e0;    {conditions the eigenvalue of the A jacobian}
     zetaA2=0.03e0;     {conditions eigenvalues so they don't go out of bound; set to 0.1-0.5}
   );
   MUSCL(
@@ -130,9 +130,9 @@ Disc(
     AOWENO_gammalo=0.95;
     AOWENO_gammahi=0.999;
     INTERPOL=INTERPOL_AOWENO7;
-    FACEINTEG=FACEINTEG_CENTRAL3;
-    EIGENVALCOND=EIGENVALCOND_GNOFFO;
-    POSFILTER=POSFILTER_NONE;
+    FACEINTEG=FACEINTEG_CENTRAL1;
+    EIGENVALCOND=EIGENVALCOND_PARENT;
+    POSFILTER=POSFILTER_PARENT;
     POSFILTER_numiter=4;
   );
 );
