@@ -1516,6 +1516,46 @@ void condition_Lambda_plus_minus_Pascal(np_t *np, gl_t *gl, long lp0, long theta
 
 
 void condition_Lambda_plus_minus_Parent(np_t *np, gl_t *gl, long lp0, long theta, jacvars_t jacvarsp0, jacvars_t jacvarsp1, metrics_t metrics,  sqmat_t Lambdaplus, sqmat_t Lambdaminus){
+  long flux,spec;
+  double lambdaadd1,lambdaadd2,lambdaadd,Vmin,Vmax,Vmass;
+  flux_t LUstarp0,LUstarp1;
+
+  condition_Lambda_plus_minus_Pascal(np, gl, lp0, theta, jacvarsp0, jacvarsp1, metrics,  Lambdaplus, Lambdaminus);
+
+  /* make sure the flux is positivity-preserving in multiple dimensions by conditioning the eigenvalues */
+  find_LUstar_from_jacvars(jacvarsp1, metrics, LUstarp1);
+  find_LUstar_from_jacvars(jacvarsp0, metrics, LUstarp0);
+
+  Vmass=0.0;
+  for (spec=0; spec<ns; spec++) Vmass+=Lambdaplus[spec][spec]*LUstarp0[spec];
+  Vmax=Vmass;
+  Vmin=Vmass;
+  for (flux=fluxmom; flux<fluxet-1; flux++) {
+    Vmax=max(Vmax,Lambdaplus[flux][flux]*LUstarp0[flux]);
+    Vmin=min(Vmin,Lambdaplus[flux][flux]*LUstarp0[flux]);
+  }
+  lambdaadd1=max(0.0,fabs(Vmax-Vmin)-(Lambdaplus[fluxet][fluxet]*LUstarp0[fluxet]+Lambdaplus[fluxet-1][fluxet-1]*LUstarp0[fluxet-1]))/LUstarp0[fluxet];
+
+  Vmass=0.0;
+  for (spec=0; spec<ns; spec++) Vmass+=-Lambdaminus[spec][spec]*LUstarp1[spec];
+  Vmax=Vmass;
+  Vmin=Vmass;
+  for (flux=fluxmom; flux<fluxet-1; flux++) {
+    Vmax=max(Vmax,-Lambdaminus[flux][flux]*LUstarp1[flux]);
+    Vmin=min(Vmin,-Lambdaminus[flux][flux]*LUstarp1[flux]);
+  }
+  lambdaadd2=max(0.0,fabs(Vmax-Vmin)-fabs(Lambdaminus[fluxet][fluxet]*LUstarp1[fluxet]+Lambdaminus[fluxet-1][fluxet-1]*LUstarp1[fluxet-1]))/LUstarp1[fluxet];
+
+  lambdaadd=max(lambdaadd1,lambdaadd2);
+
+  for (flux=fluxet-1; flux<=fluxet; flux++){
+    Lambdaplus[flux][flux]+=0.5*lambdaadd;
+    Lambdaminus[flux][flux]-=0.5*lambdaadd;
+  }
+}
+
+
+void condition_Lambda_plus_minus_Parent_old(np_t *np, gl_t *gl, long lp0, long theta, jacvars_t jacvarsp0, jacvars_t jacvarsp1, metrics_t metrics,  sqmat_t Lambdaplus, sqmat_t Lambdaminus){
   long flux;
   double Vadd1,Vadd2,Vadd,Vmin,Vmax;
   flux_t LUstarp0,LUstarp1;
@@ -1545,7 +1585,6 @@ void condition_Lambda_plus_minus_Parent(np_t *np, gl_t *gl, long lp0, long theta
     Lambdaminus[flux][flux]-=0.5*Vadd;
   }
 }
-
 
 // as defined in "Computational Aerothermodynamic Simulation Issues on Unstructured Grids" by Gnoffo and White, AIAA 2004-2371
 double _Re_edge_from_jacvars(jacvars_t jacvars, metrics_t metrics){
